--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -18,6 +18,7 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+    
     }
 
     /* Configura a área principal (main-content) */
@@ -39,6 +40,7 @@
         margin-top: 10px; /* Pequeno espaçamento acima */
         z-index: 10; /* Garante que a sidebar fique visível acima de outros elementos */
         position: relative; /* Mudança aqui para garantir que não fique fixa */
+        margin-bottom: -25px;
     }
 
     /* Top bar fixada na parte superior */
@@ -65,10 +67,10 @@
         justify-content: space-around;
         align-items: center;
         padding: 10px 16px;
-        bottom: 0;
+        bottom: -100;
         left: 0;
         right: 0;
-        margin-bottom: 120px;
+        transition: bottom 0.3s ease; /* Animação suave para aparecer */
     }
 
     /* Estilo dos links do footer */
@@ -103,5 +105,6 @@
         text-align: center;
         gap: 10px;
         padding: 20px;
+        height: 170px;
     }
 }
