--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -81,7 +81,7 @@
     }
 
     .footer-nav a:hover {
-        color: #1DB954;
+        color: #FFFFFF;
     }
 
     /* Configuração de espaços de pesquisa */
@@ -106,5 +106,6 @@
         gap: 10px;
         padding: 20px;
         height: 170px;
+        bottom: 0;
     }
 }
